Height fix for info box on tablet

--- a/styles/solved.css
+++ b/styles/solved.css
@@ -141,7 +141,7 @@ footer a:hover {
 		width: 94%;
 	}
 	.tile:first-child .info {
-		height: auto;
+		height: 200px;
 	}
 
 	.tile .the-descent-video video {
